Ajustes Swagger
